# todo_drf

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: celery.py  settings.py  urls.py
config/settings/: local.py  production.py
todo/: admin.py  models.py  serializers.py  tasks.py  viewsets.py
todo/management/commands/: generate_test_users.py
todo/migrations/: 0001_initial.py
